--- a/assets/cs/styles.css
+++ b/assets/cs/styles.css
@@ -40,7 +40,8 @@ body {
 }
 
 .start-btn,
-.next-btn {
+.next-btn,
+.refresh-button {
   font-size: 2rem;
   font-weight: bold;
   padding: 5px 10px;
